# nsdhw_24au

./: .clangd  .gitignore  README.rst
.github/: pull_request_template.md
.github/workflows/: hw0.yml  hw1.yml  hw2.yml  hw3.yml  hw4.yml  hw5.yml  hw6.yml
hw0/: README.rst
hw0/Bichen07/: countline.py
hw0/lebr0nli/: countline.py
hw1/: README.rst  validate.sh
hw1/Bichen07/: countline.py  countline.sh
hw1/CarlosChen/: countline.py
hw1/ExplorerRay/: countline.py  countline.sh
hw1/Kang-Ding-Xin-NYCU/: countline.py  countline.sh
hw1/KentLee0820/: countline.py  countline.sh
hw1/LienShark/: countline.py  countline.sh
hw1/OscarShiang/: countline.py
hw1/SUNGOD3/: countline.py  countline.sh
hw1/Sean20405/: countline.py  countline.sh
hw1/cfmc30/: countline.py  countline.sh
hw1/chris901003/: countline.py  countline.sh
hw1/hfkfo/: countline.py  countline.sh
hw1/hsiehbingting/: countline.py  countline.sh
hw1/ian31174117/: countline.py
hw1/jteng2127/: countline.py  countline.sh
hw1/lebr0nli/: countline.sh
hw1/leo27945875/: countline.py  countline.sh
hw1/ntut-xuan/: countline.py  countline.sh
hw1/oscarshiang/: countline.sh
hw1/yang2829/: countline.sh
hw2/: README.rst
hw2/ExplorerRay/: .gitignore  .gitmodules
hw2/LienShark/: main.cpp
hw2/cfmc30/q2/: CMakeLists.txt  Makefile  setup.py  test.py  test_vector_math.py
hw2/cfmc30/q2/src/: _vector.cpp  fdct.cpp
hw2/leo27945875/: .gitignore
hw3/: README.rst  validate.py
hw3/Bichen07/: Makefile  _matrix.cpp  _matrix.hpp  performance.py  performance.txt  test_matrix.py
hw3/ExplorerRay/: .gitignore  .gitmodules  Makefile  performance.txt
hw3/Kang-Ding-Xin-NYCU/: _matrix.cpp  performance.py  performance.txt  test_matrix.py
hw3/LienShark/: Makefile  _matrix.cpp  makefile.mak  multiplication.cpp  performance.txt  test_file.py
hw3/SUNGOD3/: Makefile  (+5 more)
hw3/cfmc30/: CMakeLists.txt  Makefile  _matrix.cpp  compile_commands.json  main.cpp  performance.txt  setup.py
hw3/cfmc30/src/: _matrix.cpp
hw4/: README.rst
hw5/: README.rst
hw6/: README.rst  validate.py
project/: README.rst
(+387 files in other folders)
